--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-thumb {
-    background-color: #D96725; /* Cor da parte deslizante da barra de rolagem */
+    background-color: #dc6621; /* Cor da parte deslizante da barra de rolagem */
     border-radius: 6px; 
 }
 
