--- a/style.css
+++ b/style.css
@@ -26,7 +26,6 @@ body.background-body {
     background-repeat: no-repeat;
 }
 
-
 body::-webkit-scrollbar {
     width: 12px; 
 }
@@ -39,8 +38,6 @@ body::-webkit-scrollbar-thumb {
 body::-webkit-scrollbar-track {
     background-color: #0D0F12; 
 }
-
-
 
 nav {
     position: fixed;
@@ -85,7 +82,6 @@ a:hover {
     margin-right: 10px;
 }
 
-
 .missao {
     background-size: cover;
     background-position: center;
@@ -122,9 +118,6 @@ a:hover {
     display: block; /* Remove o espaço extra abaixo da imagem */
 }
 
-
-
-
 .visao {
     background-color: #ff5e00e7;
 }
@@ -147,12 +140,10 @@ a:hover {
     object-fit: cover; 
 }
 
-
 .visao img {
     width: 100%;
     height: auto;
 }
-
 
 .valores {
     background-color: #0D0F12;
@@ -174,7 +165,6 @@ a:hover {
     max-width: 40%; /* Ajuste conforme necessário */
     margin-top: 100px; 
     margin-right: 30px;
-    
 }
 
 .valores img {
@@ -182,8 +172,6 @@ a:hover {
     height: 407px;
     object-fit: cover; /* Para garantir que a imagem mantenha as proporções e cubra a área especificada */
 }
-
-
 
 section {
     margin-top: 120px;
@@ -218,3 +206,51 @@ img {
     width: 40%;
     max-height: 100%;
 }
+
+footer {
+    background-color: #0D0F12;
+    color: #fff;
+    padding: 30px 0;
+    text-align: center;
+}
+
+.footer-content {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.footer-section {
+    max-width: 300px;
+}
+
+.footer-section h2 {
+    color: #D96725;
+    margin-bottom: 10px;
+}
+
+.footer-section p {
+    font-size: 14px;
+    line-height: 1.5;
+}
+
+.footer-section ul {
+    list-style: none;
+    padding: 0;
+}
+
+.footer-section a {
+    color: #fff;
+    text-decoration: none;
+}
+
+.footer-bottom {
+    margin-top: 20px;
+    padding-top: 10px;
+    border-top: 1px solid #D96725;
+}
+
+.footer-bottom p {
+    font-size: 14px;
+}
+
