--- a/style.css
+++ b/style.css
@@ -128,7 +128,6 @@ a:hover {
     justify-content: space-between;
     align-items: center;
     padding: 30px;
-    
 }
 
 .visao .text {
@@ -176,7 +175,6 @@ a:hover {
 }
 
 section {
-    
     background-size: cover;
     background-position: center;
     padding-left: 30px;
@@ -256,3 +254,79 @@ footer {
     font-size: 14px;
 }
 
+/* Media query para telas menores */
+@media only screen and (max-width: 768px) {
+    
+    #missaoh1{
+        padding-left: 14%;
+    }
+
+    #visaoh1{
+        padding-left: 31%;
+    }
+
+    #valoresh1{
+        padding-left: 29%;
+    }
+    .menu-btn {
+        display: block; /* Exibe o botão em telas menores */
+    }
+
+    .desktop-nav {
+        display: none;
+    }
+
+    .mobile-nav {
+        display: block;
+        position: fixed;
+        width: 100%;
+        height: 6%;
+        background-color: #0D0F12;
+    }
+
+    /* Restaura a exibição das imagens no mobile */
+    .missao img,
+    .visao img,
+    .valores img {
+        display: none;
+    }
+
+    /* Ajusta o layout das sections para telas menores */
+    .missao,
+    .visao,
+    .valores {
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+
+    .missao .content,
+    .visao .content,
+    .valores .content {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .missao .text,
+    .visao .text,
+    .valores .text {
+        max-width: 100%;
+    }
+
+    .missao .image,
+    .visao .image,
+    .valores .image {
+        margin-bottom: 10px;
+    }
+
+    /* Oculta os itens do mobile-nav e exibe apenas a logo centralizada */
+    .mobile-nav ul {
+        display: none;
+    }
+
+    .mobile-nav .logo {
+        display: block;
+        margin: 0 auto;
+        
+    }
+}
