--- a/style.css
+++ b/style.css
@@ -327,6 +327,7 @@ footer {
     .mobile-nav .logo {
         display: block;
         margin: 0 auto;
+        position: fixed;
         padding-top: 10px;
         
     }
