--- a/style.css
+++ b/style.css
@@ -309,6 +309,7 @@ footer {
 .footer-section p {
     font-size: 14px;
     line-height: 1.5;
+    text-transform: uppercase;
 }
 
 .footer-section ul {
