--- a/style.css
+++ b/style.css
@@ -155,6 +155,7 @@ header {
         flex-direction: column;
         text-align: center;
         padding-bottom: 1rem;
+        padding-right: 23px;
     }
 
     .mobile-menu .nav-item{
