--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-thumb {
-    background-color: #dc6621; /* Cor da parte deslizante da barra de rolagem */
+    background-color: #867368; /* Cor da parte deslizante da barra de rolagem */
     border-radius: 6px; 
 }
 
@@ -118,6 +118,13 @@ header {
         display: none;
     }
 
+    .nav-link{
+        text-decoration: none;
+        font-size: 31px;
+        color: aliceblue;
+        font-weight: 400;
+    }
+    
     .nav-link:hover{
         color: #D96725;
     }
