--- a/servicos/servicos.css
+++ b/servicos/servicos.css
@@ -19,15 +19,151 @@ body {
     margin: 0;
     padding: 0;
     background-color: #ffffff;
+    overflow-x: hidden;
 }
 
-.cabecalho-logo{
-    background-color: #000000;
-    background-size: cover;
-    text-align: center;
-    padding: 1em;
+
+body::-webkit-scrollbar {
+    width: 12px; 
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: #e15a1c; /* Cor da parte deslizante da barra de rolagem */
+    border-radius: 6px; 
+}
+
+body::-webkit-scrollbar-track {
+    background-color: #0D0F12; 
+}
+
+header {
+    background-color: #0D0F12;
+    position: fixed;
     width: 100%;
+    top: 0;
+    z-index: 1000;
+}
+
+.nav-bar {
+    display: flex;
+    justify-content: space-between;
+    padding: 6px 6rem; /* Ajuste a altura aqui */
+}
+
+
+
+.logo{
+    display: flex;
+    align-items: center;
+}
+
+.logo{
+    width: 375px;
+
+}
+
+.nav-list{
+    display: flex;
+    align-items: center;
+}
+
+.nav-list ul{
+    display: flex;
+    justify-content: center;
+    list-style: none;
+}
+
+.nav-item{
+    margin: 0 15px;
+}
+
+.nav-link{
+    text-decoration: none;
+    font-size: 1.15rem;
+    color: aliceblue;
+    font-weight: 400;
+}
+
+.nav-link:hover{
+    color: #D96725;
+}
+
+.mobile-menu-icon{
+    display: none;
     
+}
+
+.mobile-menu{
+    display: none;
+}
+
+
+
+@media screen and (max-width: 730px){
+
+    .nav-bar{
+        padding: 1.5rem 1rem;
+    }
+
+    .nav-item{
+        display: none;
+    }
+
+    .nav-link{
+        text-decoration: none;
+        font-size: 31px;
+        color: aliceblue;
+        font-weight: 400;
+    }
+    
+    .nav-link:hover{
+        color: #D96725;
+    }
+
+    .mobile-menu-icon{
+        display: inline-block;
+        
+    }
+
+    .icon{
+        width: 25px;
+        padding-left: 10px;
+    }
+
+    .logo{
+        display: flex;
+        align-items: center;
+        width: 13rem;
+        
+    }
+    
+    
+    
+    
+    .mobile-menu-icon button{
+        background-color: transparent;
+        border: none;
+        cursor: pointer;
+        
+        
+    }
+
+    .mobile-menu ul{
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        padding-bottom: 1rem;
+        padding-right: 23px;
+    }
+
+    .mobile-menu .nav-item{
+        display: block;
+        padding-top: 1.2rem;
+    }
+
+    .open{
+        display: block;
+    }
 }
 
 .principal-header {
@@ -82,6 +218,83 @@ p {
     color: #e15a1c;
 }
 
+.logo{
+    display: inline-block;
+    max-width: 40%;
+    
+ 
+}
+
+.logoimg{
+    padding-top: 10px;
+}
+
+#orcamento{
+    display: flex;
+    justify-content: right;
+    margin-right: 46px;
+    
+    
+}
+
+
+.button {
+    line-height: 1;
+    text-decoration: none;
+    display: inline-flex;
+    align-items: center;
+    gap: .75rem;
+    background-color:#e15a1c ;
+    color: #fff;
+    border-radius: 10rem;
+    font-weight: 600;
+    padding: .75rem 1.5rem;
+    padding-left: 20px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    transition: background-color .3s;
+    
+  }
+
+ 
+  
+  .button__icon-wrapper {
+    flex-shrink: 0;
+    width: 25px;
+    height: 25px;
+    position: relative;
+    color: var(--clr);
+    background-color: #fff;
+    border-radius: 50%;
+    display: grid;
+    place-items: center;
+    overflow: hidden;
+  }
+  
+  .button:hover {
+    background-color: #1d1d1d;
+  }
+  
+  .button:hover .button__icon-wrapper {
+    color: #000;
+  }
+  
+  .button__icon-svg--copy {
+    position: absolute;
+    transform: translate(-150%, 150%);
+  }
+  
+  .button:hover .button__icon-svg:first-child {
+    transition: transform .3s ease-in-out;
+    transform: translate(150%, -150%);
+  }
+  
+  .button:hover .button__icon-svg--copy {
+    transition: transform .3s ease-in-out .1s;
+    transform: translate(0);
+  }
+
 .btn {
     font-size: 17px;
     background: transparent;
@@ -132,3 +345,73 @@ p {
     color: aliceblue;
   }
   
+
+  .btn-whatsapp a {
+
+	color:#fff; 
+	text-decoration:none; 
+	display:block; 
+}
+
+.btn-whatsapp {
+    
+    position:fixed; 
+    right:5px; 
+    bottom:5px; 
+    transform: translate(-50%, -50%);  
+    background-color:rgb(37, 211, 102); 
+    width:60px; height:60px; 
+    text-align:center; 
+    line-height:58px; 
+    font-size:1.8em; 
+    color:#ffffff; 
+    font-weight:100; 
+    border-radius:50%; 
+}
+
+.btn-whatsapp:before,
+.btn-whatsapp:after
+
+{
+
+	content: '';
+    display:block;
+    position: absolute;
+    border-radius:50%;
+    border:1px solid #25d366;
+    left: -20px;
+    right: -20px;
+    bottom: -20px;
+    top: -20px;
+    animation: animate 1.5s linear infinite;
+    opacity:0;
+    backface-visibility:hidden;    
+}
+
+.pulsaDelay:after { animation-delay: .5s; }
+
+@keyframes animate {
+
+
+   0%   { transform: scale(0.5); opacity:0; }
+   50%  { opacity:1; }
+   100% { transform: scale(1.2); opacity:0; }
+
+}
+
+
+@media only screen and (max-width: 768px) {
+    #orcamento {
+        display: none;
+    }
+
+    cabecalho-logo{
+        background-color: #000000;
+        background-size: cover;
+        text-align: center;
+        width: 100vw;
+        justify-content: space-around;
+        
+        
+    }
+}
