--- a/servicos/servicos.css
+++ b/servicos/servicos.css
@@ -415,3 +415,62 @@ p {
         
     }
 }
+
+
+
+footer {
+    background-color: #0D0F12;
+    color: #fff;
+    padding: 30px 0;
+    text-align: center;
+}
+
+footer p{
+    color: #ffffff;
+}
+
+.footer-content {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.footer-section {
+    max-width: 300px;
+}
+
+.footer-section h2 {
+    color: #D96725;
+    margin-bottom: 10px;
+}
+
+.footer-section p {
+    font-size: 14px;
+    line-height: 1.5;
+    text-transform: uppercase;
+}
+
+.footer-section ul {
+    list-style: none;
+    padding: 0;
+}
+
+.footer-section a {
+    color: #fff;
+    text-decoration: none;
+}
+
+.footer-bottom {
+    margin-top: 20px;
+    padding-top: 10px;
+    border-top: 1px solid #D96725;
+}
+
+.footer-bottom p {
+    font-size: 14px;
+}
+
+#devsession{
+    text-decoration: none;
+    color: white;
+}
