--- a/style.css
+++ b/style.css
@@ -26,12 +26,12 @@ body.background-body {
 }
 
 .top-feed {
-    /* Adicione estilos para a seção conforme necessário */
     background-image: url(imagens/backgroundbridge.jpg);
     padding-top: 15%;
-    margin-top: 50px; /* Ajuste a margem superior conforme necessário */
     opacity: 0.9;
-    box-shadow: 0px 5px 15px rgba(221, 88, 6, 0.749);
+    box-shadow: 0px 5px 15px rgba(224, 93, 12, 0.3);
+    background-size: cover;
+    background-position: center;
 }
 
 .buttons-container {
