--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ header {
 .nav-link{
     text-decoration: none;
     font-size: 1.15rem;
-    color: aliceblue;
+    color:  #eeecdc;
     font-weight: 400;
 }
 
