--- a/servicos/servicos.css
+++ b/servicos/servicos.css
@@ -44,13 +44,16 @@ header {
     z-index: 1000;
 }
 
+header.transparent {
+    background-color:rgba(13, 15, 18, 0.543) ;
+}
+
+
 .nav-bar {
     display: flex;
     justify-content: space-between;
     padding: 6px 6rem; /* Ajuste a altura aqui */
 }
-
-
 
 #logoimg{
     width: 85%;
@@ -76,7 +79,7 @@ header {
 .nav-link{
     text-decoration: none;
     font-size: 1.15rem;
-    color: aliceblue;
+    color:  #eeecdc;
     font-weight: 400;
 }
 
@@ -92,8 +95,6 @@ header {
 .mobile-menu{
     display: none;
 }
-
-
 
 @media screen and (max-width: 730px){
 
