--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body.background-body {
     box-shadow: 0px 5px 15px rgba(224, 93, 12, 0.3);
     background-size: cover;
     background-position: center;
+    
 }
 
 .buttons-container {
@@ -177,6 +178,18 @@ header {
         font-weight: 400;
     }
     
+
+    .buttons-container{
+      display: none;   
+    }
+
+    .top-feed {
+        background-image: none;
+        background-size: cover;
+        background-position: center;
+        
+    }
+
     .nav-link:hover{
         color: #D96725;
     }
