--- a/bridgestyle.css
+++ b/bridgestyle.css
@@ -412,7 +412,7 @@ footer {
     .nav-link{
         text-decoration: none;
         font-size: 31px;
-        color: aliceblue;
+        color: white;
         font-weight: 400;
     }
 
