--- a/style.css
+++ b/style.css
@@ -421,7 +421,7 @@ footer {
 
 
     .top-mobile{
-    background-image: url(imagens/background-mobile.jpg);
+    background-image: url(imagens/background-mobile.png);
     background-color: #D96725;
     padding-top: 41rem;
     display: block;
