--- a/style.css
+++ b/style.css
@@ -455,6 +455,23 @@ footer {
     }
 
     
+    
+    #projetos-mobile{
+    display: flex;
+    width: 60%;
+    margin-left: 21%;
+    margin-top: 10%;
+    border-radius: 9px;
+    box-shadow: 0 8px 16px rgba(199, 193, 180, 0.2), 0 -8px 16px rgba(198, 189, 170, 0.511);
+    transition: opacity 0.3s ease-in-out;
+    }
+
+    #projetos-mobile:hover{
+        opacity: 0.7;
+    
+    }
+
+
     #arvoredoprev{
     display: flex;
     width: 76%;
@@ -467,7 +484,7 @@ footer {
 
 
     #arvoredoprev:hover{
-        opacity: 0.8;
+        opacity: 0.7;
     
     }
 
@@ -495,7 +512,7 @@ footer {
     .projetos-mobile h2{
         color: white;
         font-size: 24px;
-        padding-left: 13%;
+        padding-left: 21%;
         padding-top: 18px;
 
     }
@@ -503,7 +520,7 @@ footer {
     .projetos-mobile h3{
         color: #ff6a00;
         font-size: 16px;
-        padding-left: 13%;
+        padding-left: 21%;
         padding-top: 10px;
     }
 
@@ -566,7 +583,7 @@ footer {
         flex-direction: column;
         text-align: center;
         padding-bottom: 1rem;
-        padding-right: 23px;
+        
     }
 
     .mobile-menu .nav-item{
