--- a/style.css
+++ b/style.css
@@ -144,12 +144,56 @@ nav.transparent{
     font-weight: bold;
 }
 
-#vermais {
-    text-decoration: none;
-    color: #ff6a00;
-    font-weight: bolder;
-    
-}
+.btn {
+    font-size: 17px;
+    background: transparent;
+    border: none;
+    padding: 1em 1.5em;
+    color: #fc7f26;
+    text-transform: uppercase;
+    position: relative;
+    transition: 0.5s ease;
+    cursor: pointer;
+  }
+  
+  .btn::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 2px;
+    width: 0;
+    background-color: #fc7f26;
+    transition: 0.5s ease;
+  }
+  
+  .btn:hover {
+    color: #f9f9f9;
+    transition-delay: 0.5s;
+  }
+  
+  .btn:hover::before {
+    width: 100%;
+  }
+  
+  .btn::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 0;
+    width: 100%;
+    background-color: #fc7f26;
+    transition: 0.4s ease;
+    z-index: -1;
+  }
+  
+  .btn:hover::after {
+    height: 100%;
+    transition-delay: 0.4s;
+    color: aliceblue;
+  }
+  
 
 
 
