--- a/style.css
+++ b/style.css
@@ -39,6 +39,8 @@ header {
     z-index: 1000;
 }
 
+
+
 /*NAV-BAR PC*/
 .nav-bar {
     display: flex;
@@ -97,6 +99,109 @@ nav.transparent{
     height: auto;
 }
 
+.img-back {
+    position: relative;
+}
+
+.img-back button {
+    position: absolute;
+    top: 64%;
+    left: 19%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    max-width: 70%; /* Defina a largura máxima do texto conforme necessário */
+    
+}
+
+.animated-button {
+    position: relative;
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    padding: 16px 36px;
+    border: 4px solid;
+    border-color: transparent;
+    font-size: 16px;
+    background-color: inherit;
+    border-radius: 100px;
+    font-weight: 600;
+    color: #ffffff;
+    box-shadow: 0 0 0 2px #fc7f26;
+    cursor: pointer;
+    overflow: hidden;
+    transition: all 0.6s cubic-bezier(0.23, 1, 0.32, 1);
+  }
+  
+  .animated-button svg {
+    position: absolute;
+    width: 24px;
+    fill: #fc7f26;
+    z-index: 9;
+    transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
+  }
+  
+  .animated-button .arr-1 {
+    right: 16px;
+  }
+  
+  .animated-button .arr-2 {
+    left: -25%;
+  }
+  
+  .animated-button .circle {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 20px;
+    height: 20px;
+    background-color: #fc7f26;
+    border-radius: 50%;
+    opacity: 0;
+    transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
+  }
+  
+  .animated-button .text {
+    position: relative;
+    z-index: 1;
+    transform: translateX(-12px);
+    transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
+  }
+  
+  .animated-button:hover {
+    box-shadow: 0 0 0 12px transparent;
+    color: #ffffff;
+    border-radius: 12px;
+  }
+  
+  .animated-button:hover .arr-1 {
+    right: -25%;
+  }
+  
+  .animated-button:hover .arr-2 {
+    left: 16px;
+  }
+  
+  .animated-button:hover .text {
+    transform: translateX(12px);
+  }
+  
+  .animated-button:hover svg {
+    fill: #ffffff;
+  }
+  
+  .animated-button:active {
+    scale: 0.95;
+    box-shadow: 0 0 0 4px #fc7f26;
+  }
+  
+  .animated-button:hover .circle {
+    width: 220px;
+    height: 220px;
+    opacity: 1;
+  }
+  
+
 
 .top-mobile{
     display: none;
@@ -146,95 +251,7 @@ nav.transparent{
 }
 
 
-button {
-  width: 140px;
-  height: 56px;
-  overflow: hidden;
-  border: none;
-  color: #fff;
-  background: none;
-  position: relative;
-  padding-bottom: 2em;
-  cursor: pointer;
-}
 
-button > div,
-button > svg {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  display: flex;
-}
-
-button:before {
-  content: "";
-  position: absolute;
-  height: 2px;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  transform: scaleX(0);
-  transform-origin: bottom right;
-  background: currentColor;
-  transition: transform 0.25s ease-out;
-}
-
-button:hover:before {
-  transform: scaleX(1);
-  transform-origin: bottom left;
-}
-
-button .clone > *,
-button .text > * {
-  opacity: 1;
-  font-size: 1.3rem;
-  transition: 0.2s;
-  margin-left: 4px;
-}
-
-button .clone > * {
-  transform: translateY(60px);
-}
-
-button:hover .clone > * {
-  opacity: 1;
-  transform: translateY(0px);
-  transition: all 0.2s cubic-bezier(0.215, 0.61, 0.355, 1) 0s;
-}
-
-button:hover .text > * {
-  opacity: 1;
-  transform: translateY(-60px);
-  transition: all 0.2s cubic-bezier(0.215, 0.61, 0.355, 1) 0s;
-}
-
-button:hover .clone > :nth-child(1) {
-  transition-delay: 0.15s;
-}
-
-button:hover .clone > :nth-child(2) {
-  transition-delay: 0.2s;
-}
-
-button:hover .clone > :nth-child(3) {
-  transition-delay: 0.25s;
-}
-
-button:hover .clone > :nth-child(4) {
-  transition-delay: 0.3s;
-}
-/* icon style and hover */
-button svg {
-  width: 20px;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%) rotate(-50deg);
-  transition: 0.2s ease-out;
-}
-
-button:hover svg {
-  transform: translateY(-50%) rotate(-90deg);
-}
 
 
 .btn {
