--- a/style.css
+++ b/style.css
@@ -750,6 +750,7 @@ footer {
         flex-direction: column;
         text-align: center;
         padding-bottom: 1rem;
+        padding-top: 10%;
         
     }
 
