--- a/contato/contato.css
+++ b/contato/contato.css
@@ -95,8 +95,9 @@ header.transparent {
 .email{
     margin-top: 8rem;
     color: #eeecdc;
-    padding-left: 6rem;
+   text-align: center;
     font-size: 18px;
+    padding-bottom: 24px;
     
 }
 
@@ -105,11 +106,9 @@ header.transparent {
     color: #eeecdc;
 }
 
-.tels{
-    padding-top: 2%;
-    padding-left: 6rem;
-    font-size: 15px;
-    
+.tels {
+    text-align: center;
+    font-size: 20px;
 }
 
 .tels a{
@@ -120,6 +119,7 @@ header.transparent {
 h1{
     padding-bottom: 31px;
     font-size: 52px;
+    text-align: center;
 }
 
 
