--- a/servicos/servicos.css
+++ b/servicos/servicos.css
@@ -320,10 +320,130 @@ footer {
     cursor: pointer;
 }
 
+    .top-frase-mobile{
+
+        display: none;
+
+    }
+    
 
 
 @media screen and (max-width: 730px){
 
+    
+    .top-frase-mobile{
+        display: block;
+    }
+
+    .top-frase-mobile img{
+        opacity: 50%;
+    }
+
+    .top-frase-mobile h1 {
+        text-align: center;
+        color: #ffffff;
+        font-weight: bolder;
+        font-size: 39px;
+        position: absolute;
+        top: 42%;
+        left: 2%;
+    }
+
+
+    .top-frase-mobile button {
+        position: absolute;
+        top: 60%;
+        left: 21%;
+    }
+
+    .button-mobile {
+        
+        transition: all 0.3s ease-in-out;
+        box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
+        padding-block: 0.5rem;
+        padding-inline: 1.25rem;
+        background-color: rgb(0 107 179);
+        border-radius: 9999px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        color: #ffff;
+        gap: 10px;
+        font-weight: bold;
+        border: 3px solid #ffffff4d;
+        outline: none;
+        overflow: hidden;
+        font-size: 15px;
+      }
+      
+      .icon {
+        display: none;
+      }
+      
+      .button-mobile:hover {
+        transform: scale(1.05);
+        border-color: #fff9;
+      }
+      
+      .button-mobile:hover .icon {
+        transform: translate(4px);
+      }
+      
+      .button-mobile:hover::before {
+        animation: shine 1.5s ease-out infinite;
+      }
+      
+      .button-mobile::before {
+        content: "";
+        position: absolute;
+        width: 100px;
+        height: 100%;
+        background-image: linear-gradient(
+          120deg,
+          rgba(255, 255, 255, 0) 30%,
+          rgba(255, 255, 255, 0.8),
+          rgba(255, 255, 255, 0) 70%
+        );
+        top: 0;
+        left: -100px;
+        opacity: 0.6;
+      }
+      
+      @keyframes shine {
+        0% {
+          left: -100px;
+        }
+      
+        60% {
+          left: 100%;
+        }
+      
+        to {
+          left: 100%;
+        }
+      }
+      
+
+
+
+    
+
+    .top-frase{
+        display: none;
+    }
+
+
+
+    .cards-container{
+        display: none;
+    }
+
+   .top-frase img{
+    display: none;
+   }
+
+   
 
 
     .top-content{
