--- a/servicos/servicos.css
+++ b/servicos/servicos.css
@@ -353,81 +353,116 @@ footer {
     .top-frase-mobile button {
         position: absolute;
         top: 60%;
-        left: 21%;
+        left: 16%;
     }
 
-    .button-mobile {
-        
-        transition: all 0.3s ease-in-out;
-        box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
-        padding-block: 0.5rem;
-        padding-inline: 1.25rem;
-        background-color: rgb(0 107 179);
-        border-radius: 9999px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+    .top-frase-mobile h3 {
+        text-align: center;
+        color: #ffffff;
+        font-weight: bolder;
+        font-size: 23px;
+        position: absolute;
+        top: 66%;
+        left: 31%;
+    }
+
+    
+    .scrolldown {
+        --color: white;
+        --sizeX: 30px;
+        --sizeY: 50px;
+        position: absolute;
+        width: var(--sizeX);
+        height: var(--sizeY);
+        margin-left: var(sizeX / 2);
+        border: calc(var(--sizeX) / 10) solid #ff6a00;
+        border-radius: 50px;
+        box-sizing: border-box;
+        margin-bottom: 16px;
         cursor: pointer;
-        color: #ffff;
-        gap: 10px;
-        font-weight: bold;
-        border: 3px solid #ffffff4d;
-        outline: none;
-        overflow: hidden;
-        font-size: 15px;
-      }
+        top: 77%;
+        left: 45%;
+    }
       
-      .icon {
-        display: none;
-      }
-      
-      .button-mobile:hover {
-        transform: scale(1.05);
-        border-color: #fff9;
-      }
-      
-      .button-mobile:hover .icon {
-        transform: translate(4px);
-      }
-      
-      .button-mobile:hover::before {
-        animation: shine 1.5s ease-out infinite;
-      }
-      
-      .button-mobile::before {
+      .scrolldown::before {
         content: "";
         position: absolute;
-        width: 100px;
-        height: 100%;
-        background-image: linear-gradient(
-          120deg,
-          rgba(255, 255, 255, 0) 30%,
-          rgba(255, 255, 255, 0.8),
-          rgba(255, 255, 255, 0) 70%
-        );
-        top: 0;
-        left: -100px;
-        opacity: 0.6;
+        bottom: 30px;
+        left: 50%;
+        width: 6px;
+        height: 6px;
+        margin-left: -3px;
+        background-color: #ff6a00;
+        border-radius: 100%;
+        animation: scrolldown-anim 2s infinite;
+        box-sizing: border-box;
+        box-shadow: 0px -5px 3px 1px #d44c0866;
       }
       
-      @keyframes shine {
+      @keyframes scrolldown-anim {
         0% {
-          left: -100px;
+          opacity: 0;
+          height: 6px;
         }
       
-        60% {
-          left: 100%;
+        40% {
+          opacity: 1;
+          height: 10px;
+        }
+      
+        80% {
+          transform: translate(0, 20px);
+          height: 10px;
+          opacity: 0;
+        }
+      
+        100% {
+          height: 3px;
+          opacity: 0;
+        }
+      }
+      
+      .chevrons {
+        padding: 6px 0 0 0;
+        margin-left: -3px;
+        margin-top: 48px;
+        width: 30px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+      
+      .chevrondown {
+        margin-top: -6px;
+        position: relative;
+        border: solid #ff6a00;
+        border-width: 0 3px 3px 0;
+        display: inline-block;
+        width: 10px;
+        height: 10px;
+        transform: rotate(45deg);
+      }
+      
+      .chevrondown:nth-child(odd) {
+        animation: pulse54012 500ms ease infinite alternate;
+      }
+      
+      .chevrondown:nth-child(even) {
+        animation: pulse54012 500ms ease infinite alternate 250ms;
+      }
+      
+      @keyframes pulse54012 {
+        from {
+          opacity: 0;
         }
       
         to {
-          left: 100%;
+          opacity: 0.5;
         }
       }
-      
 
 
 
-    
 
     .top-frase{
         display: none;
