--- a/servicos/servicos.css
+++ b/servicos/servicos.css
@@ -614,4 +614,8 @@ footer {
         display: block;
     }
     
-}
+    
+        .footer-bottom p {
+            font-size: 11px;
+        }
+    }
